--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,8 @@ body {
     color: rgb(240, 240, 240);
 }
 
+/* Navbar */
+
 .logo {
     width: 300px;
     height: 300px;
@@ -40,6 +42,8 @@ body {
 }
 
 
+/* Backgrounds */
+
 .album_background {
     text-align: center;
     background-image: url("../img/background.jpg");
@@ -66,6 +70,9 @@ body {
     background-color: rgb(223, 223, 223);
 }
 
+
+/* Header */
+
 .new_album {
     background-color: rgba(103, 1, 187, 0.3);
     width: 30%;
@@ -79,6 +86,11 @@ body {
 .spacer {
     padding-top: 30%;
 }
+
+
+/* ----------------------- */
+/*    @@@ Biographie       */
+/* ----------------------- */
 
 .bio-title {
     font-size: 7vw;
@@ -130,11 +142,56 @@ body {
     opacity: 1;
 }
 
-.text {
+.member .text {
     color: rgb(46, 12, 75);
     font-size: 25px;
     padding: 16px 32px;
-  }
+}
+
+
+/* ----------------------- */
+/*    @@@ Discographie     */
+/* ----------------------- */
+
+.album {
+    margin-bottom: 25px;
+}
+
+.album .text {
+    font-size: 15px;
+}
+
+.album .text i{
+    font-family: 'Libre Bodoni', serif;
+    font-size: 30px;
+}
+
+.description {
+    padding-bottom: 10px;
+}
+
+.cover-frame {
+    width: 300px;
+    height: auto;
+    border: 3px solid rgb(223, 223, 223);
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.cover {
+    width: 300px;
+    height: auto;
+    transition: 1s ease-in-out;
+}
+
+.cover:hover {
+    transform: scale(1.1);
+}
+
+
+/* ----------------------- */
+/*    @@@ Media Variations */
+/* ----------------------- */
 
 @media screen and (max-width: 900px) {
     .logo {
@@ -142,18 +199,40 @@ body {
         height: 200px;
         padding-top: 10px;
         padding-bottom: 20px;
-      }
+    }
     .new_album {
-        background-color: rgba(103, 1, 187, 0.3);
         width: 85%;
     }
     .new_album_title {
         font-size: 50px;
-        font-family: 'Libre Bodoni', serif;
     }
     .bio-text {
         font-size: 3vw;
-        font-family: 'Roboto', sans-serif;
+    }
+    .member_photo {
+        width: 100%;
+        height: auto;
+    }
+
+
+    .cover-frame {
+        width: 200px;
+        height: auto;
+        border: 3px solid rgb(223, 223, 223);
+        overflow: hidden;
+        border-radius: 10px;
+    }
+    .cover {
+        width: 200px;
+        transition: 1s ease-in-out;
+    }
+
+    .album .text{
+        font-size: 10px;
+    }
+
+    .album .text i{
+        font-size: 15px;
     }
 }
 
