--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@ body {
     margin: 0;
 }
 
+a, a:after {
+    text-decoration: none;
+}
+
 .white {
     color: rgb(240, 240, 240);
 }
@@ -46,20 +50,23 @@ body {
 
 .album_background {
     text-align: center;
-    background-image: url("../img/background.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
 }
 
+.album_background_1 {
+    background-image: url("../img/background1.jpg");
+}
+
 .album_background_2 {
-    text-align: center;
     background-image: url("../img/background2.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+    padding-top: 35%;
+}
+
+.album_background_3 {
+    background-image: url("../img/background3.jpg");
     padding-top: 35%;
 }
 
@@ -189,6 +196,13 @@ body {
 }
 
 
+.carousel-control {
+    background-color: rgb(176, 139, 91, 0.4);
+    border-radius: 50%;
+    padding: 40px;
+}
+
+
 /* ----------------------- */
 /*    @@@ Media Variations */
 /* ----------------------- */
@@ -213,18 +227,22 @@ body {
         width: 100%;
         height: auto;
     }
+}
 
+
+@media screen and (max-width: 700px) {
+    iframe {
+        width: 100%;
+    }
+    .spacer {
+        padding-top: 35%;
+    }
 
     .cover-frame {
         width: 200px;
-        height: auto;
-        border: 3px solid rgb(223, 223, 223);
-        overflow: hidden;
-        border-radius: 10px;
     }
     .cover {
         width: 200px;
-        transition: 1s ease-in-out;
     }
 
     .album .text{
@@ -233,17 +251,6 @@ body {
 
     .album .text i{
         font-size: 15px;
-    }
-}
-
-
-@media screen and (max-width: 700px) {
-    iframe {
-        width: 80%;
-        height: auto;
-    }
-    .spacer {
-        padding-top: 35%;
     }
 }
 
